--- a/css/index/main.css
+++ b/css/index/main.css
@@ -297,8 +297,8 @@
   main .logo-contain {
     display: flex;
     position: absolute;
-    width: 150%;
-    height: 60%;
+    width: 100%;
+    height: 50%;
     bottom: 17rem;
     justify-content: center;
     align-items: center;
@@ -314,7 +314,7 @@
     display: flex;
     position: absolute;
     left: 0;
-    top: 60rem;
+    top: 10rem;
     align-items: center;
     z-index: 3;
   }
@@ -322,8 +322,8 @@
   main #position-right {
     display: flex;
     position: absolute;
-    right: 2rem;
-    top: 60rem;
+    right: 0;
+    top: 10rem;
     align-items: center;
     z-index: 3;
   }
@@ -332,7 +332,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    width: 500px;
+    width: 80%;
     height: 100%;
     background-color: #181818ef;
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
@@ -349,7 +349,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 500px;
+    width: 65%;
     height: 100%;
     background-color: #181818ef;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
