--- a/css/olimpia/1366x768/contact.css
+++ b/css/olimpia/1366x768/contact.css
@@ -3,8 +3,9 @@
     display: flex;
     background-color: #191919;
     width: 100%;
-    height: 420px;
+    height: 38rem;
     color: white;
+    flex-direction: column;
   }
 
   .section h1 {
@@ -13,8 +14,8 @@
 
   .section .content-contact {
     display: flex;
-    width: 30%;
-    height: 100%;
+    width: 100%;
+    height: 40%;
     padding-top: 40px;
     padding-left: 100px;
     font-size: 24px;
@@ -29,8 +30,8 @@
 
   .section .content-ubi {
     display: flex;
-    width: 70%;
-    height: 100%;
+    width: 100%;
+    height: 70%;
     flex-direction: column;
   }
 
