--- a/css/olimpia/720x1600/home.css
+++ b/css/olimpia/720x1600/home.css
@@ -2,14 +2,14 @@
   header {
     display: flex;
     width: 100%;
-    height: 974px;
+    height: 100vh;
     background-color: rgba(255, 255, 255, 0);
     justify-content: center;
     align-items: center;
   }
 
   header .container {
-    height: 2000px; /* Simula contenido largo para el scroll */
+    height: 2000px;
   }
 
   header .static-image {
@@ -18,10 +18,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    /* background-image: url("tu-imagen.jpg"); */
     background-size: cover;
     background-attachment: fixed;
-    z-index: -1; /* Para que quede detrás del contenido */
+    z-index: -1;
     filter: brightness(70%);
+  }
+
+  header #logo {
+    max-width: 80%;
   }
 }
