--- a/css/olimpia/720x1600/info.css
+++ b/css/olimpia/720x1600/info.css
@@ -13,6 +13,7 @@
     height: 100%;
     position: relative;
     display: flex;
+    flex-direction: column;
     /* align-items: center;
   justify-content: center; */
   }
@@ -40,8 +41,8 @@
 
   main #contain-1 .contain-text {
     display: flex;
-    width: 50%;
-    height: 100%;
+    width: 100%;
+    height: 50%;
     /* position: relative; */
     color: white;
     flex-direction: column;
@@ -50,6 +51,8 @@
     padding-right: 15%;
     padding-left: 5%;
     justify-content: center;
+    align-items: center;
+    padding-right: 50px;
   }
 
   main #contain-1 .contain-text p,
@@ -63,7 +66,7 @@
   }
 
   main #contain-1 .contain-text p {
-    font-size: 20px;
+    font-size: 10px;
   }
 
   main #contain-1 .contain-service {
