--- a/css/olimpia/720x1600/section.css
+++ b/css/olimpia/720x1600/section.css
@@ -3,7 +3,7 @@
     display: flex;
     background-color: #191919;
     width: 100%;
-    height: 150px;
+    height: 4rem;
     align-items: center;
     padding-left: 15%;
     font-size: 40px;
