--- a/css/IFM/720x1600/home.css
+++ b/css/IFM/720x1600/home.css
@@ -22,16 +22,16 @@
 
   header .contain-img {
     display: none;
-    width: 80%;
-    height: 80%;
-    margin: 0px 80px;
+    position: absolute;
+    width: 100%;
+    height: 30%;
+    margin: 0px 70px;
     color: white;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    position: absolute;
     top: 50%;
-    left: 850px;
+    left: 10rem;
     transform: translate(-50%, -50%);
     flex-direction: column;
   }
