--- a/css/IFM/720x1600/home.css
+++ b/css/IFM/720x1600/home.css
@@ -24,14 +24,14 @@
     display: none;
     position: absolute;
     width: 100%;
-    height: 30%;
+    height: 25%;
     margin: 0px 70px;
     color: white;
     justify-content: center;
     align-items: center;
     overflow: hidden;
     top: 50%;
-    left: 10rem;
+    left: 8rem;
     transform: translate(-50%, -50%);
     flex-direction: column;
   }
@@ -39,7 +39,7 @@
   header .contain-img img {
     width: 60%;
     height: 80%;
-    object-fit: cover;
+    /* object-fit: cover; */
     opacity: 0;
     animation: fadeInAnimation 2s forwards;
   }
