--- a/css/IFM/720x1600/home.css
+++ b/css/IFM/720x1600/home.css
@@ -24,7 +24,7 @@
     display: none;
     position: absolute;
     width: 100%;
-    height: 25%;
+    height: 100%;
     margin: 0px 70px;
     color: white;
     justify-content: center;
@@ -37,9 +37,12 @@
   }
 
   header .contain-img img {
-    width: 60%;
-    height: 80%;
-    /* object-fit: cover; */
+    /* width: 60%;
+    height: 80%; */
+    /* max-width: 100%; */
+    width: 100%;
+    height: 20%;
+    object-fit: cover;
     opacity: 0;
     animation: fadeInAnimation 2s forwards;
   }
