--- a/css/IFM/1920x1080/footer.css
+++ b/css/IFM/1920x1080/footer.css
@@ -14,7 +14,7 @@
     height: 100%;
     justify-content: center;
     align-items: center;
-    color: whitesmoke;
+    color: rgb(145, 145, 145);
     flex-direction: column;
   }
 
