--- a/css/innov8/responsive.css
+++ b/css/innov8/responsive.css
@@ -1,4 +1,4 @@
-@import url(../../index/colors.css);
+@import url(../index/colors.css);
 @import url(article.css);
 @import url(footer.css);
 @import url(general.css);
