--- a/css/IFM/contact.css
+++ b/css/IFM/contact.css
@@ -73,17 +73,17 @@
 
   .section .content-ubi .content-img #mexico:hover {
     border-radius: 5px;
-    content: url(../../../assets/images/Flag_of_Mexico.png);
+    content: url(../../assets/images/Flag_of_Mexico.png);
   }
 
   .section .content-ubi .content-img #colombia:hover {
     border-radius: 5px;
-    content: url(../../../assets/svg/Flag_Colombia.svg);
+    content: url(../../assets/svg/Flag_Colombia.svg);
   }
 
   .section .content-ubi .content-img #eeuu:hover {
     border-radius: 5px;
-    content: url(../../../assets/images/Flag_of_the_United_States.png);
+    content: url(../../assets/images/Flag_of_the_United_States.png);
   }
 }
 
@@ -163,17 +163,17 @@
 
   .section .content-ubi .content-img #mexico:hover {
     border-radius: 5px;
-    content: url(../../../assets/images/Flag_of_Mexico.png);
+    content: url(../../assets/images/Flag_of_Mexico.png);
   }
 
   .section .content-ubi .content-img #colombia:hover {
     border-radius: 5px;
-    content: url(../../../assets/svg/Flag_Colombia.svg);
+    content: url(../../assets/svg/Flag_Colombia.svg);
   }
 
   .section .content-ubi .content-img #eeuu:hover {
     border-radius: 5px;
-    content: url(../../../assets/images/Flag_of_the_United_States.png);
+    content: url(../../assets/images/Flag_of_the_United_States.png);
   }
 }
 
@@ -267,16 +267,16 @@
 
   .section .content-ubi .content-img #mexico:hover {
     border-radius: 5px;
-    content: url(../../../assets/images/Flag_of_Mexico.png);
+    content: url(../../assets/images/Flag_of_Mexico.png);
   }
 
   .section .content-ubi .content-img #colombia:hover {
     border-radius: 5px;
-    content: url(../../../assets/svg/Flag_Colombia.svg);
+    content: url(../../assets/svg/Flag_Colombia.svg);
   }
 
   .section .content-ubi .content-img #eeuu:hover {
     border-radius: 5px;
-    content: url(../../../assets/images/Flag_of_the_United_States.png);
+    content: url(../../assets/images/Flag_of_the_United_States.png);
   }
 }
