--- a/css/index/main.css
+++ b/css/index/main.css
@@ -17,14 +17,15 @@ main .image-contain {
   position: absolute;
   top: 0;
   left: 0;
-  filter: grayscale();
+  /* filter: grayscale(); */
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
   z-index: 1;
 }
 
 main .image-contain img {
-  width: 50%;
+  /* width: 50%; */
+  width: 100%;
   height: 100%;
   overflow: hidden;
   object-fit: cover;
@@ -271,7 +272,7 @@ main .logo-contain .buttoms a:hover span:nth-child(4) {
 
 @media only screen and (min-width: 1200px) {
   main .image-contain img {
-    width: 50%;
+    width: 100%;
     height: 100%;
   }
 
