--- a/css/IFM/article.css
+++ b/css/IFM/article.css
@@ -65,9 +65,30 @@ article #contain2 form #submit:hover {
   background-color: #003f7e;
 }
 
+article #contain1 .content-contact {
+  display: flex;
+  width: 30%;
+  height: 100%;
+  padding-top: 40px;
+  padding-left: 100px;
+  font-size: 24px;
+  flex-direction: column;
+  text-align: start;
+}
+
+article #contain1 .content-contact img {
+  filter: invert(48%) sepia(93%) saturate(1392%) hue-rotate(184deg)
+    brightness(94%) contrast(93%);
+}
+
 @media only screen and (min-width: 1200px) {
   article {
     height: 50rem;
+  }
+
+  article #contain1 .content-contact {
+    width: 30%;
+    height: 100%;
   }
 }
 
@@ -75,9 +96,19 @@ article #contain2 form #submit:hover {
   article {
     height: 50rem;
   }
+
+  article #contain1 .content-contact {
+    width: 100%;
+    height: 40%;
+  }
 }
 @media only screen and (max-width: 767px) {
   article {
     height: 50rem;
+  }
+
+  article #contain1 .content-contact {
+    width: 100%;
+    height: 20%;
   }
 }
