--- a/css/IFM/article.css
+++ b/css/IFM/article.css
@@ -70,6 +70,7 @@ article #contain1 .content-contact {
   /* width: 100%;
   height: 100%; */
   font-size: 24px;
+  padding-left: 300px;
   flex-direction: column;
   text-align: start;
   justify-content: center;
