--- a/css/IFM/home.css
+++ b/css/IFM/home.css
@@ -1,7 +1,7 @@
 header {
   display: flex;
   width: 100%;
-  height: 974px;
+  height: 60.875rem;
   background-color: black;
   justify-content: center;
   align-items: center;
